@@ -847,6 +847,10 @@ body {
 
 <p><strong>show_classlist</strong> | <code>bool</code> | Allows hiding the class list.</p>
 
+<p><strong>random_option</strong> | <code>bool</code> | Initially picks a random character option (aka portrait/name).</p>
+
+<p><strong>random_class</strong> | <code>bool</code> | Initially picks a random character class.</p>
+
 <hr />
 
 <h4>GameStateNew: Hero options</h4>
